{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 47,
  "lineage": "90f26d4a-950e-7b4b-f435-4bb555fca0ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07b318503c109fa41",
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:instance/i-0fa7901ef210f9bc7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa7901ef210f9bc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f6c2bc7af333c4ce",
            "private_dns": "ip-10-0-0-56.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.56",
            "public_ip": "52.65.180.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ee90b90a223304c",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081d27b6b801e6cae",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3e0a9c6c90572dd"
            ]
          },
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_subnet.public",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:internet-gateway/igw-07f75608b1f77b892",
            "id": "igw-07f75608b1f77b892",
            "owner_id": "439500389780",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "vpc_id": "vpc-0ef4e26decb61a41b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:route-table/rtb-085502f269cb6efb1",
            "id": "rtb-085502f269cb6efb1",
            "owner_id": "439500389780",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f75608b1f77b892",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef4e26decb61a41b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092a0ea74e83e6c49",
            "route_table_id": "rtb-085502f269cb6efb1",
            "subnet_id": "subnet-081d27b6b801e6cae"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:security-group/sg-0d3e0a9c6c90572dd",
            "description": "Security group allowing traffic on ports 443 and 80",
            "egress": [],
            "id": "sg-0d3e0a9c6c90572dd",
            "ingress": [],
            "name": "public-http-traffic",
            "name_prefix": "",
            "owner_id": "439500389780",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef4e26decb61a41b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:subnet/subnet-081d27b6b801e6cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d27b6b801e6cae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "439500389780",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-public",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-public",
              "Project": "06-resources"
            },
            "vpc_id": "vpc-0ef4e26decb61a41b"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:vpc/vpc-0ef4e26decb61a41b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dd6b68023d48cd6",
            "default_route_table_id": "rtb-0568436da6fe946db",
            "default_security_group_id": "sg-06b3d028ff0c82e8a",
            "dhcp_options_id": "dopt-03d0420accc34119d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef4e26decb61a41b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0568436da6fe946db",
            "owner_id": "439500389780",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources",
              "Project": "06-resources"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:security-group-rule/sgr-07c1caedf9a568cf1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-07c1caedf9a568cf1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d3e0a9c6c90572dd",
            "security_group_rule_id": "sgr-07c1caedf9a568cf1",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:439500389780:security-group-rule/sgr-0d3118fd930f14ab9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0d3118fd930f14ab9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d3e0a9c6c90572dd",
            "security_group_rule_id": "sgr-0d3118fd930f14ab9",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}